# fideus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI_Ubuntu.yml  CI_Windows.yml  CI_macOS.yml
src/: lib.rs  main.rs  menu_first.rs  menu_main.rs  menu_second.rs  menu_third.rs  options.rs  product.rs
src/console/: console_menu.rs  mod.rs  run_console.rs
src/console/options/: general_options.rs  menu_options.rs  mod.rs
src/desktop/: information.rs  main_menu.rs  mod.rs  run_desktop.rs  window.rs
src/desktop/impl_options/: calculations.rs  information.rs  list.rs  mod.rs  products.rs
src/desktop/style/: dark_theme.css
src/options/: general_options.rs  menu_options.rs  mod.rs
src/product_structure/: mod.rs  product.rs
tests/: integration_tests.rs
