[package]
name = "finance_manager"
version = "2.0.2"
edition = "2021"
authors = ["Andrew Kushyk"]
description = "Simple finance manager"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
