[package]
name = "finance_manager"
version = "2.0.2"
edition = "2021"
authors = ["Andrew Kushyk"]
description = "Simple finance manager"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

#stable Dioxus version (use after a new release)
#dioxus = "0.3.2"
#dioxus-desktop = "0.3.0"

#git Dioxus version (the latest)
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
